--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 bin/
 backups/*
 etc/*
-!etc/sample.viz_config.sh
 !etc/sample.gitconfig
+!etc/azviz/Dockerfile
+!etc/azviz/sample.viz_config.sh
+!etc/azviz/viz_run.ps1
 modules/*
 !modules/generic/
 !modules/prime-reportstream/
